<resources>
    <string name="app_name">Music Theory quiz</string>
    <string name="major">Major</string>
    <string name="natural_minor">Natural Minor</string>
    <string name="harmonic_minor">Harmonic Minor</string>
    <string name="melodic_minor">Melodic Minor</string>
    <string name="Message_result1">Have you ever heard about the music scales? That\'s what music harmony is based on!</string>
    <string name="Message_result2">You need to study more!</string>
    <string name="Message_result3">Not bad, but I know you can better!</string>
    <string name="Message_result4">Almost perfect!</string>
    <string name="Message_result5">Congratulations! You\'ve answered correctly to all the questions!</string>
    <string name="music_theory_quiz">Music Theory quiz</string>
    <string name="scale_identification">Scale identification</string>
    <string name="begin_button"> B e g i N </string>
    <string name="try_again">  Try again  </string>
    <string name="chords_question">What chords make up famous ii-V-I progression in the key of G?</string>
    <string name="f">F#</string>
    <string name="am">Am</string>
    <string name="cm">Cm</string>
    <string name="g">G</string>
    <string name="d7">D7</string>
    <string name="note_question">What note is missing in the following minor pentatonic scale?</string>
    <string name="note_question2">C - Eb - F - _ - Bb - C</string>
    <string name="note_question_hint">type your answer here</string>
    <string name="b_e_g_i_n">b e g i n</string>
    <string name="Toast_result_Awesome">Awesome!</string>
    <string name="Toast_result_Not_Bad">Not bad!</string>
    <string name="Toast_result_Looser">Looser!</string>
</resources>
