<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notes_background"
    android:orientation="vertical"
    tools:context="com.example.android.musictheoryquiz.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/dancing_script"
        android:gravity="center"
        android:paddingTop="60dp"
        android:text="@string/chords_question"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/checkboxF"
        style="@style/CheckBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/f" />

    <CheckBox
        android:id="@+id/checkboxAm"
        style="@style/CheckBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am" />

    <CheckBox
        android:id="@+id/checkboxCm"
        style="@style/CheckBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm" />

    <CheckBox
        android:id="@+id/checkboxG"
        style="@style/CheckBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g" />

    <CheckBox
        android:id="@+id/checkboxD7"
        style="@style/CheckBoxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d7" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="checkAndGoToTheQuestion7"
        android:src="@drawable/arrow" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:max="70"
        android:progress="60" />


</LinearLayout>