<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notes_background"
    android:orientation="vertical"
    tools:context="com.example.android.musictheoryquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/harmonic_minor2" />

    <ImageButton
        android:id="@+id/sound_q5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:onClick="playTheScale5"
        android:scaleType="centerCrop"
        android:src="@drawable/sound" />

    <RadioGroup
        android:id="@+id/q5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <RadioButton
            android:id="@+id/q5_1"
            style="@style/RadioButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkAndGoToTheQuestion6"
            android:text="@string/major" />

        <RadioButton
            android:id="@+id/q5_2"
            style="@style/RadioButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="checkAndGoToTheQuestion6"
            android:text="@string/natural_minor" />

        <RadioButton
            android:id="@+id/q5_3"
            style="@style/RadioButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="checkAndGoToTheQuestion6"
            android:text="@string/harmonic_minor" />

        <RadioButton
            android:id="@+id/q5_4"
            style="@style/RadioButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="checkAndGoToTheQuestion6"
            android:text="@string/melodic_minor" />

    </RadioGroup>


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:max="70"
        android:progress="50" />


</LinearLayout>
